build: JDK 21, wip
- everything works in general
- DirectDraw still looks ugly
- Dialogs and Messages Boxes are shown off location

Signed-off-by: manticore-projects <andreas@manticore-projects.com>